FIXED so that verification line now breaks the line when overflowing. RM

--- a/src/frontend/piano.css
+++ b/src/frontend/piano.css
@@ -343,4 +343,5 @@ body {
   /*margin-top: 40px;*/
   color: black;
   box-sizing: border-box;
+  overflow-wrap: break-word;
 }
